--- a/docs/out_ptr/overview.adoc
+++ b/docs/out_ptr/overview.adoc
@@ -8,12 +8,12 @@
 //  See http://www.boost.org/libs/out_ptr/ for documentation.
 ////
 
-# Boost.OutPtr at a glance
+# phd.out_ptr at a glance
 
-Have you ever wanted to pass a smart pointer like `std::unique_ptr` or `phd::shared_ptr` or `phd::intrusive_ptr` to a C API?
+Have you ever wanted to pass a smart pointer like `std::unique_ptr` or `boost::shared_ptr` or `phd::intrusive_ptr` to a C API?
 
 ```
-phd::shared_ptr<mll_driver> axis_driver;
+boost::shared_ptr<mll_driver> axis_driver;
 mll_errno err = mll_driver_init(&axis_driver, 
 	/* additional args ...*/);
 if (err != MLL_SUCESS) {
@@ -28,7 +28,7 @@ The above code doesn't compile: the pointer may be "smart", but it isn't smart e
 Downgrading to a raw pointer and then inserting it into the pointer works, but is more verbose:
 
 ```
-phd::shared_ptr<mll_driver> axis_driver;
+boost::shared_ptr<mll_driver> axis_driver;
 mll_driver* raw_axis_driver = nullptr;
 mll_errno err = mll_driver_init(&raw_axis_driver, 
 	/* additional args ...*/);
@@ -42,12 +42,12 @@ This works, but you need to call `.reset(...)` with the raw pointer and set ever
 
 ### Let's make it simple and easy!
 
-With Boost.OutPtr, we can do better. Get rid of the raw pointer and avoid potential memory or resource leakage by using this https://en.cppreference.com/w/cpp/language/raii[RAII] function:
+With phd.out_ptr, we can do better. Get rid of the raw pointer and avoid potential memory or resource leakage by using this https://en.cppreference.com/w/cpp/language/raii[RAII] function:
 
 ```
 using bop = phd::out_ptr;
 
-phd::shared_ptr<mll_driver> axis_driver(nullptr);
+boost::shared_ptr<mll_driver> axis_driver(nullptr);
 mll_errno err = mll_driver_init(bop::out_ptr(axis_driver, mll_driver_free), 
 	/* additional args ...*/);
 if (err != MLL_SUCESS) {
@@ -57,11 +57,11 @@ if (err != MLL_SUCESS) {
 
 No reset call, no inspecting for exception safety, and it remembers the deleter we passed in after `axis_driver` to safely and properly call `.reset()` for shared pointers that stores the deleter.
 
-Welcome to Boost.OutPtr, the present and future of C API interoperation. This library automates the `.reset(...)` and -- sometimes additionally -- the `.release()` call when interfacing with C-style initialization functions which take an "output parameter" of `$$T**$$`.
+Welcome to phd.out_ptr, the present and future of C API interoperation. This library automates the `.reset(...)` and -- sometimes additionally -- the `.release()` call when interfacing with C-style initialization functions which take an "output parameter" of `$$T**$$`.
 
 - Use <<reference/out_ptr.adoc#ref.out_ptr.function, `phd::out_ptr::out_ptr`>> when you just need to call `.reset()`, or use <<reference/inout_ptr.adoc#ref.inout_ptr.function, `phd::out_ptr::inout_ptr`>>, when you need to call `.release()` and then `.reset()` (e.g., for a reallocating C function).
 - Get started with the <<examples.adoc#examples,examples>>.
-- Understand the pitfalls and problems that come with {cpp} and Boost.OutPtr by reading <<caveats.adoc#caveats, the Caveats>>.
+- Understand the pitfalls and problems that come with {cpp} and phd.out_ptr by reading <<caveats.adoc#caveats, the Caveats>>.
 - Read up on how to use it with your <<customization.adoc#customization, custom smart pointers>>, if you do not have a conforming interface!
 - The exact interface requirements on the desired smart pointers can be seen in the <<reference.adoc#ref.api, reference documentation for the types produced by the factory functions>>.
 - Peruse & use the advanced <<config.adoc#config, configuration options>> for safety, sanity checking, and speed!
