--- a/docs/out_ptr/overview.adoc
+++ b/docs/out_ptr/overview.adoc
@@ -10,8 +10,9 @@
 
 # phd.out_ptr at a glance
 
-Have you ever wanted to pass a smart pointer like `std::unique_ptr` or `boost::shared_ptr` or `phd::intrusive_ptr` to a C API?
+Have you ever wanted to pass a smart pointer like `std::unique_ptr` or `boost::shared_ptr` or `boost::intrusive_ptr` to a C API?
 
+[source,cpp]
 ```
 boost::shared_ptr<mll_driver> axis_driver;
 mll_errno err = mll_driver_init(&axis_driver, 
@@ -27,6 +28,7 @@ The above code doesn't compile: the pointer may be "smart", but it isn't smart e
 
 Downgrading to a raw pointer and then inserting it into the pointer works, but is more verbose:
 
+[source,cpp]
 ```
 boost::shared_ptr<mll_driver> axis_driver;
 mll_driver* raw_axis_driver = nullptr;
@@ -44,6 +46,7 @@ This works, but you need to call `.reset(...)` with the raw pointer and set ever
 
 With phd.out_ptr, we can do better. Get rid of the raw pointer and avoid potential memory or resource leakage by using this https://en.cppreference.com/w/cpp/language/raii[RAII] function:
 
+[source,cpp]
 ```
 using pop = phd::out_ptr;
 
