--- a/docs/out_ptr.adoc
+++ b/docs/out_ptr.adoc
@@ -21,6 +21,7 @@ ThePhD
 
 So, you have code that looks like this:
 
+[source,cpp]
 ```
 foo_t* new_foo;
 if (!create_foo(&new_foo)) {
@@ -30,6 +31,7 @@ if (!create_foo(&new_foo)) {
 
 And it's not just one bit. Hundreds, maybe even thousands of calls like this are scatted all throughout you code base. You know about smart pointers, and you want to turn it into something like this for better exception safety and all that RAII goodness you hear about:
 
+[source,cpp]
 ```
 std::unique_ptr<foo_t> new_foo;
 if (!create_foo(new_foo)) {
@@ -39,6 +41,7 @@ if (!create_foo(new_foo)) {
 
 Or, this:
 
+[source,cpp]
 ```
 std::unique_ptr<foo_t> new_foo;
 if (!create_foo(&new_foo)) {
@@ -50,6 +53,7 @@ Doing this by hand is increasingly difficult with the number of calls you need t
 
 With this library, you now can do exactly this at the call site:
 
+[source,cpp]
 ```
 using pop = phd::out_ptr;
 
@@ -63,7 +67,7 @@ phd.out_ptr provides the a way to have C code retain identical semantics to the 
 
 More formally, this library automates the `.reset(...)` call with `phd::out_ptr::out_ptr(...)` wrapping an argument passed to a C-style function taking a `$$T**$$` argument. Additionally, it automates the `.release(...)` and `.reset(...)` paradigm with `phd::out_ptr::inout_ptr(...)` in cases where the `T**` argument passed to the function will both delete and then allocate the resource being handled.
 
-Additional optimizations are implemented within the library to ensure good performance by default for a myriad of types, including `boost::movelib:unique_ptr` and `std::unique_ptr`. It also helps catch small errors in using `shared_ptr`-types reset calls, and works out-of-the-box for many other types including the upcoming `std::retain_ptr`, `phd::intrusive_ptr`, and any other types which follow the `.reset(...)`/`.release()` paradigm (or have constructors that behave similarly).
+Additional optimizations are implemented within the library to ensure good performance by default for a myriad of types, including `boost::movelib:unique_ptr` and `std::unique_ptr`. It also helps catch small errors in using `shared_ptr`-types reset calls, and works out-of-the-box for many other types including the upcoming `std::retain_ptr`, `boost::intrusive_ptr`, and any other types which follow the `.reset(...)`/`.release()` paradigm (or have constructors that behave similarly).
 
 toc::[]
 
