--- a/docs/out_ptr/reference.adoc
+++ b/docs/out_ptr/reference.adoc
@@ -43,6 +43,7 @@ The following are definitions for some meta-functions done on types. If you see 
 
 The contents of the library are in namespace phd.OutPtr. There are two template functions: `out_ptr` and `inout_ptr`. There are two types that correspond to each of the 2 template functions, `out_ptr_t` and `inout_ptr_t`:
 
+[source,cpp]
 ```
 namespace phd { namespace out_ptr {
 	
@@ -68,6 +69,7 @@ namespace phd { namespace out_ptr {
 
 There are also 2 traits types which can be specialized, `out_ptr_traits` and `inout_ptr_traits`:
 
+[source,cpp]
 ```
 namespace phd { namespace out_ptr {
 	
